--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
+    "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^1.3.3",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
