--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,10 +30,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        uses: actions/setup-node@v3
-          with:
-            node-version: 16
-        run: npm install
+        run: npm ci
         run: npm run build:release
       - name: Setup Pages
         uses: actions/configure-pages@v3
