--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,8 +30,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        run: npm ci
-        run: npm run build:release
+      - run: npm ci
+      - run: npm run build:release
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
